# Veskto

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/scripts/: self-heal.sh
.github/workflows/: build-and-test.yml  build-tauri.yml  sync-unstable.yml
scripts/: sync-all.sh
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: app.rs  autostart.rs  dbus.rs  mod.rs  settings.rs  tray.rs  vencord.rs  venmic.rs  window.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: cli.rs  mod.rs  paths.rs  protocol.rs  vencord_loader.rs
src/frontend/: index.html  main.tsx  vesktopNative.ts
